--- a/CiscoSecurityAutomation/CiscoSecurityAutomation.csproj
+++ b/CiscoSecurityAutomation/CiscoSecurityAutomation.csproj
@@ -33,6 +33,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>ICON-cisco.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Data" />
@@ -103,6 +106,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="bg.jpg" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="ICON-cisco.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
